# hyper-denpa

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/hyper-denpa-cli/: Cargo.toml
crates/hyper-denpa-cli/src/: cli.rs  main.rs
crates/hyper-denpa-core/: Cargo.toml
crates/hyper-denpa-core/src/: auth.rs  config.rs  env.rs  fs_utils.rs  lib.rs  models.rs  pipeline.rs  show.rs  xlsx.rs
crates/hyper-denpa-discord/: Cargo.toml
crates/hyper-denpa-discord/src/: app.rs  main.rs  timetable.rs
crates/hyper-denpa-sharepoint/: Cargo.toml
crates/hyper-denpa-sharepoint/src/: lib.rs  sharepoint.rs
