[workspace]
members = [
    "crates/hyper-denpa-core",
    "crates/hyper-denpa-cli",
    "crates/hyper-denpa-discord",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
calamine = { version = "0.34", features = ["chrono"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend", "utils"] }
sha2 = "0.10"
thirtyfour = "0.35"
tokio = { version = "1", features = ["full"] }
